Version 0.82 - 23 September 2009

- don't consider xorg.conf files with no InputDevice sections as invalid, fixes   bug reported on cooker mailing list

Version 0.81 - 23 September 2009

- add psb driver support (for Poulsbo chipset)

Version 0.80 - 22 September 2009

- XFdrake:
  o don't write sections in xorg.conf for USB wacom tablets, Synaptics
    touchpads, mouses using "evdev" or "mouse" and keyboards

Version 0.79 - 14 September 2009

- XFdrake: 
  o fix DontZap option issue with old xorg.conf files
- allow to skip framebuffer setup (and thus splash removal) for newer
  harddrake releases

Version 0.78 - 9 September 2009

- XFdrake:
  o added "Disable Ctrl-Alt-Backspace" option

Version 0.77 - 22 July 2009

- XFdrake:
  o correctly detect proprietary drivers that are located in
    /usr/lib/drivername/xorg (#52384)

Version 0.76 - 25 June 2009

- keyboarddrake: 
  o update the xkb HAL keys when the keyboard layout is changed so that it
    persists after a X server restart. Bug #49725
- XFdrake:
  o when probing for video cards, ignore cards which are not in the VIDEO_VGA
    PCI class (it is pretty common for dual-head ATI cards to have a
    VIDEO_OTHER device for example). This has the potential of breaking
    dual head setups, so it needs careful testing in Cooker ;) See bug #48028
  o fix crash when both monitor and driver can not be probed (in
    harddrake service or XFdrake --auto), for example with some Quanta
    IL1 netbooks using Chrome9 IC3

Version 0.74 - 22 April 2009

- mousedrake:
  o fix vmmouse configuration for vmware (#49654)

Version 0.73 - 21 April 2009

- tweak Intel driver accel methods in xorg.conf so that it's more consistent
  with what the new Intel driver expects.

Version 0.72 - 15 April 2009

- XFdrake:
  o fix selecting proprietary drivers with xdriver=DRIVER boot option
  o do not add Load "freetype" to xorg.conf as the module does not exist
    anymore
  o use Plug'n'Play monitor when in vbox and don't specify any default